htick 0.9
---------
(released on Mon May 22 14:58:56 CEST 2000)

Thu Aug 10 13:19:13 MSD 2000
max (patch from Serguei Revtov):
* simple MSGID generation fix
* small change in sun/makefile

Tue Jul 25 22:09:07 NOVST 2000
max (patch from Pavel Gulchouk):
* module=htick
* filefix changes

Tue Jul 11 21:05:00 SAMST 2000
Georgi:
* remove description for file[s] (field 'replace' in TIC)

Mon Jun 19 23:45:48 SAMST 2000
Georgi:
* fixed some bugs in toss and hatch

----- cvs ci ------
Mon Jun 05 12:23:00 SAMST 2000
Georgi:
* fixed bug in remove file[s]
* added new token delNotRecievedTIC (in link section) -
  if file not recieved, then remove TIC
* added new filearea option - noreplace
* htick now again compile
  Sorry

----- cvs ci ------
Fri Jun 02 10:48:00 SAMST 2000
Georgi:
* now outgoing tics stores in ticOutbound directory
  if ticOutbound not define, then in passFileAreaDir
* fixed bug in clean - if separateBundles and busy
* now htick can remove file[s], if field replace is filemask
  Warning! Non tested

----- cvs ci ------
Thu Jun 01 15:00:00 SAMST 2000
Georgi:
* change some code in toss and hatch
  Warning! Non tested
* in hatch now work replace and ExecOnFile
* fixed bug - if noTIC and link is busy

----- cvs ci ------
Sun May 28 17:35:00 SAMST 2000
Georgi (patch from Lev Serebryakov, 2:5030/661):
* htick now creates DLC, if addDLC is set and DLCDigits is between 1 and 20.
* htick now process case of file names according to config
  (ConvertShortNames, ConvertLongNames tokens)

----- cvs ci ------
Mon May 22 14:52:27 CEST 2000
mtt:
* changed version number to 0.9

----- cvs ci ------
Wed May 17 21:40:28 NOVST 2000
max (patch from Alex Bronin):
* fix cleaning passthrough dir:
 - outgoing tics stores in passFileAreaDir
 - outgoing tics for busy links stores in busyFileDir
   (default <outbound>/busy.htk)
 - clean files in passthrough dir only if command 'htick clean' used
* fix printing link's access by areafix
* fix ExecOnFile with passthrough filearea